.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:46:18 **** インクリメンタル・ビルド of configuration Debug for project ProjectC ****
make all 
Building file: ../src/ProjectC.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ProjectC.d" -MT"src/ProjectC.d" -o "src/ProjectC.o" "../src/ProjectC.c"
../src/ProjectC.c: In function ‘main’:
../src/ProjectC.c:24:2: warning: implicit declaration of function ‘count’ [-Wimplicit-function-declaration]
  sum = count(begin,end);
  ^
../src/ProjectC.c:26:2: warning: implicit declaration of function ‘intMax’ [-Wimplicit-function-declaration]
  maxValue = intMax(16,10,20);
  ^
../src/ProjectC.c:17:6: warning: variable ‘sum’ set but not used [-Wunused-but-set-variable]
  int sum = 0;
      ^
../src/ProjectC.c: In function ‘count’:
../src/ProjectC.c:42:3: warning: statement with no effect [-Wunused-value]
   for (begin;begin <= end ; begin++){
   ^
../src/ProjectC.c: In function ‘hairetsuMax’:
../src/ProjectC.c:66:2: error: ‘for’ loop initial declarations are only allowed in C99 mode
  for(int i = 0; i <= 3; i++){
  ^
../src/ProjectC.c:66:2: note: use option -std=c99 or -std=gnu99 to compile your code
../src/ProjectC.c:69:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/ProjectC.o] エラー 1
16:46:24 **** インクリメンタル・ビルド of configuration Debug for project ProjectC ****
make all 
Building file: ../src/ProjectC.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ProjectC.d" -MT"src/ProjectC.d" -o "src/ProjectC.o" "../src/ProjectC.c"
../src/ProjectC.c: In function ‘main’:
../src/ProjectC.c:24:2: warning: implicit declaration of function ‘count’ [-Wimplicit-function-declaration]
  sum = count(begin,end);
  ^
../src/ProjectC.c:26:2: warning: implicit declaration of function ‘intMax’ [-Wimplicit-function-declaration]
  maxValue = intMax(16,10,20);
  ^
../src/ProjectC.c:17:6: warning: variable ‘sum’ set but not used [-Wunused-but-set-variable]
  int sum = 0;
      ^
../src/ProjectC.c: In function ‘count’:
../src/ProjectC.c:42:3: warning: statement with no effect [-Wunused-value]
   for (begin;begin <= end ; begin++){
   ^
../src/ProjectC.c: In function ‘hairetsuMax’:
../src/ProjectC.c:66:2: error: ‘for’ loop initial declarations are only allowed in C99 mode
  for(int i = 0; i <= 3; i++){
  ^
../src/ProjectC.c:66:2: note: use option -std=c99 or -std=gnu99 to compile your code
../src/ProjectC.c:69:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/ProjectC.o] エラー 1
16:46:39 **** インクリメンタル・ビルド of configuration Debug for project ProjectC ****
make all 
Building file: ../src/ProjectC.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ProjectC.d" -MT"src/ProjectC.d" -o "src/ProjectC.o" "../src/ProjectC.c"
../src/ProjectC.c: In function ‘main’:
../src/ProjectC.c:24:2: warning: implicit declaration of function ‘count’ [-Wimplicit-function-declaration]
  sum = count(begin,end);
  ^
../src/ProjectC.c:26:2: warning: implicit declaration of function ‘intMax’ [-Wimplicit-function-declaration]
  maxValue = intMax(16,10,20);
  ^
../src/ProjectC.c:17:6: warning: variable ‘sum’ set but not used [-Wunused-but-set-variable]
  int sum = 0;
      ^
../src/ProjectC.c: In function ‘count’:
../src/ProjectC.c:42:3: warning: statement with no effect [-Wunused-value]
   for (begin;begin <= end ; begin++){
   ^
Finished building: ../src/ProjectC.c
 
Building target: ProjectC
Invoking: GCC C Linker
gcc  -o "ProjectC"  ./src/ProjectC.o   
Finished building target: ProjectC
 
16:47:36 **** インクリメンタル・ビルド of configuration Debug for project ProjectC ****
make all 
Building file: ../src/ProjectC.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ProjectC.d" -MT"src/ProjectC.d" -o "src/ProjectC.o" "../src/ProjectC.c"
../src/ProjectC.c: In function ‘main’:
../src/ProjectC.c:24:2: warning: implicit declaration of function ‘count’ [-Wimplicit-function-declaration]
  sum = count(begin,end);
  ^
../src/ProjectC.c:26:2: warning: implicit declaration of function ‘intMax’ [-Wimplicit-function-declaration]
  maxValue = intMax(16,10,20);
  ^
../src/ProjectC.c:18:6: warning: variable ‘maxValue’ set but not used [-Wunused-but-set-variable]
  int maxValue = 0;
      ^
../src/ProjectC.c:17:6: warning: variable ‘sum’ set but not used [-Wunused-but-set-variable]
  int sum = 0;
      ^
../src/ProjectC.c: In function ‘count’:
../src/ProjectC.c:42:3: warning: statement with no effect [-Wunused-value]
   for (begin;begin <= end ; begin++){
   ^
Finished building: ../src/ProjectC.c
 
Building target: ProjectC
Invoking: GCC C Linker
gcc  -o "ProjectC"  ./src/ProjectC.o   
Finished building target: ProjectC
 
